@@ -117,6 +117,8 @@ Provide 9 prev solutions.
 Reduce efforts for completesol heuristic if obj only change.
 Reuse best 10 cuts.
 --- 31 jan full ---
+Revert cut reuse change.
+O3 compilation
 
 TODOs
 Revert cuts change
